completed the remaining semester links

--- a/page-depth-01/page-depth-02/S06.html
+++ b/page-depth-01/page-depth-02/S06.html
@@ -99,7 +99,8 @@
   <div class="container-5" align=center style="width:76%;max-width: 600px;">
     <table class="resources-table-5" align=center style="width:90%;">
       <tr>
-        <a href="#" target="_blank" class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">6th
+        <a href="https://drive.google.com/drive/folders/1_jlvvJXUVnh0HDQp4VR-xhYtTHryj20C?usp=drive_link"
+          target="_blank" class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">6th
           Semester
           Courses</a>
       </tr>
@@ -116,18 +117,50 @@
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1j1Os8LHGAgfOl1gbJjiqWWy05kmsk4Mk?usp=drive_link"
+          <a href="https://drive.google.com/drive/folders/1nPDQAnm5fQVTLOxGP7NqCOcSwGGd3Bem?usp=drive_link"
             target="_blank" class="cell-link">
-            AI
-            <br><small>CSE311 + CSE312</small>
+            Compiler
+            <br><small>CSE351 + CSE352</small>
           </a>
         </td>
-      
+
         <td>
-          <a href="https://drive.google.com/drive/folders/1ziNG4HDSQVDz0gR8qU1OMbtVW8EPeVRM?usp=drive_link"
-            target="_blank" class="cell-link">CN
-            <br><small>CSE313 + CSE314</small>
+          <a href="https://drive.google.com/drive/folders/1Sk3cJwYA0slESsWxa0Xvllerh40iTP-1?usp=drive_link"
+            target="_blank" class="cell-link">Software Engineering
+            <br><small>CSE355 + CSE356/small>
           </a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://drive.google.com/drive/folders/138zkPmC6GXxJOPXdUb3zj4-tdqIT_ix9?usp=drive_link"
+            target="_blank" class="cell-link">
+            Computer Graphics
+            <br><small>CSE357 + CSE358</small>
+          </a>
+        </td>
+
+        <td>
+          <a href="https://drive.google.com/drive/folders/1snMh8qTLGLy5eqR5FBTVFhDAJYNITBqu?usp=drive_link"
+            target="_blank" class="cell-link">Microprocessors
+            <br><small>CSE359 + CSE360</small>
+          </a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://drive.google.com/drive/folders/1YstV74bC9Vy9VAkfCTpqILzA0jL2DYXd?usp=drive_link"
+            target="_blank" class="cell-link">
+            I&OM 
+            <br><small>GED 115</small>
+          </a>
+        </td>
+
+        <td style="background-color: #00000000;">
+          <!-- <a href="https://drive.google.com/drive/folders/1snMh8qTLGLy5eqR5FBTVFhDAJYNITBqu?usp=drive_link"
+            target="_blank" class="cell-link">Microprocessors
+            <br><small>CSE359 + CSE360</small>
+          </a> -->
         </td>
       </tr>
 
