--- a/page-depth-01/page-depth-02/S07.html
+++ b/page-depth-01/page-depth-02/S07.html
@@ -99,7 +99,8 @@
   <div class="container-5" align=center style="width:76%;max-width: 600px;">
     <table class="resources-table-5" align=center style="width:90%;">
       <tr>
-        <a href="#" target="_blank" class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">7th
+        <a href="https://drive.google.com/drive/folders/1_hTSpADeXWoHnm90pzbsO7lpZQKAlHkb?usp=drive_link"
+          target="_blank" class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">7th
           Semester
           Courses</a>
       </tr>
@@ -116,21 +117,68 @@
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1j1Os8LHGAgfOl1gbJjiqWWy05kmsk4Mk?usp=drive_link"
+          <a href="https://drive.google.com/drive/folders/1C8j93IMJ7U6zUANlAH2nUeLhE12j5PYi?usp=drive_link"
             target="_blank" class="cell-link">
-            AI
-            <br><small>CSE311 + CSE312</small>
+            Simulation and Modeling
+            <br><small>CSE413</small>
           </a>
         </td>
-      
+
         <td>
-          <a href="https://drive.google.com/drive/folders/1ziNG4HDSQVDz0gR8qU1OMbtVW8EPeVRM?usp=drive_link"
-            target="_blank" class="cell-link">CN
-            <br><small>CSE313 + CSE314</small>
+          <a href="https://drive.google.com/drive/folders/1HrgdXqI1i0iN6Wrh1JIWa7NUyTpeL30P?usp=drive_link"
+            target="_blank" class="cell-link">Scientific Research
+            <br><small>CSE418</small>
           </a>
         </td>
       </tr>
+      <tr>
+        <td>
+          <a href="https://drive.google.com/drive/folders/1cF2I1OdDpi-TMSOnD8sMg7mUR3w4wgxp?usp=drive_link"
+            target="_blank" class="cell-link">
+            Operating Systems
+            <br><small> CSE411 + CSE412</small>
+          </a>
+        </td>
 
+        <td>
+          <a href="https://drive.google.com/drive/folders/13yd5bW_UjMYmY1aunmq6Nsp_nXnReAw1?usp=drive_link"
+            target="_blank" class="cell-link">Industrial Attachment
+            <br><small> CSE420</small>
+          </a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://drive.google.com/drive/folders/1BDXFHdEjoJEwyeGBkbbS2ZzNgJ9Zub-s?usp=drive_link"
+            target="_blank" class="cell-link">
+            Software Project Design
+            <br><small>CSE416</small>
+          </a>
+        </td>
+
+        <td>
+          <a href="https://drive.google.com/drive/folders/153HLCcu2Kt-3wU6z-f6ujmSQqX85H-R3?usp=drive_link"
+            target="_blank" class="cell-link">Capstone Project
+            <br><small> CSE490</small>
+          </a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://drive.google.com/drive/folders/1deGPqXj8JqS72dQt3EKi3KReVrdiL2df?usp=drive_link"
+            target="_blank" class="cell-link">
+            Internet of Things  
+            <br><small> CSE401 + CSE402</small>
+          </a>
+        </td>
+
+        <td>
+          <a href="https://drive.google.com/drive/folders/1Hvv28jl20e9olD0ToWbsVkG5Cj3dnJog?usp=drive_link"
+            target="_blank" class="cell-link">Machine Learning
+            <br><small> CSE431 + CSE432</small>
+          </a>
+        </td>
+      </tr>
     </table>
   </div>
 
