--- a/page-depth-01/page-depth-02/S08.html
+++ b/page-depth-01/page-depth-02/S08.html
@@ -97,7 +97,7 @@
   <div class="container-5" align=center style="width:76%;max-width: 600px;">
     <table class="resources-table-5" align=center style="width:90%;">
       <tr>
-        <a href="#" target="_blank" class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">8th
+        <a href="https://drive.google.com/drive/folders/1_cWZ_73eWMo4n_WK_DWPlQMoGxTRQWk2?usp=drive_link" target="_blank" class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">8th
           Semester
           Courses</a>
       </tr>
@@ -114,17 +114,33 @@
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1j1Os8LHGAgfOl1gbJjiqWWy05kmsk4Mk?usp=drive_link"
+          <a href="https://drive.google.com/drive/folders/1cNlANirFZYtjIYm4utSZ5-4W7ZzadO65?usp=drive_link"
             target="_blank" class="cell-link">
-            AI
-            <br><small>CSE311 + CSE312</small>
+            Professional Ethics
+            <br><small> CSE459</small>
           </a>
         </td>
       
         <td>
-          <a href="https://drive.google.com/drive/folders/1ziNG4HDSQVDz0gR8qU1OMbtVW8EPeVRM?usp=drive_link"
-            target="_blank" class="cell-link">CN
-            <br><small>CSE313 + CSE314</small>
+          <a href="https://drive.google.com/drive/folders/1Xke8qu1dpd-rFvKjkUch8svzKZphTw88?usp=drive_link"
+            target="_blank" class="cell-link">Technical Writings 
+            <br><small>CSE492</small>
+          </a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://drive.google.com/drive/folders/1XAuS1BQ_eES_Mdg-DsuIl5UsnodhYxMm?usp=drive_link"
+            target="_blank" class="cell-link">
+            Data Mining
+            <br><small> CSE425 + CSE426</small>
+          </a>
+        </td>
+      
+        <td>
+          <a href="https://drive.google.com/drive/folders/1Du1Yc_zCNIZVIOuYyU1e_4y15rp2rR3y?usp=drive_link"
+            target="_blank" class="cell-link">Digital Image Processing 
+            <br><small>CSE437 + CSE438</small>
           </a>
         </td>
       </tr>
