tried to dim the default text inside select tag

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     <div style="width: 85%;padding-right: 15px;margin: auto;margin-top: -10px;margin-bottom: -30px;"
       class=".resources-table-5" align="center">
 
-      <label for="department">Click Below to Browse Semesters</label>
+      <label for="department" style="margin-bottom: 5px;">Click Below to Browse Semesters</label>
       <select id="department" class="custom-select" onchange="updateSemesters()"
         style="padding: 5%;max-width: 245px;border-radius: 20px;min-height: 60px;margin-left: 5%;margin-right: 5%;">
         <option value="list-description" align="center">( Click Here )</option>
