--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       <label for="department" style="margin-bottom: 5px;">Click Below to Browse Semesters</label>
       <select id="department" class="custom-select" onchange="updateSemesters()"
         style="padding: 5%;max-width: 245px;border-radius: 20px;min-height: 60px;margin-left: 5%;margin-right: 5%;">
-        <option value="list-description" align="center">( Click Here )</option>
+        <option value="list-description" align="center" style="color:#000000 ;">( Click Here )</option>
         <option value="cse" align="center">CSE</option>
         <option value="ce" align="center">CE</option>
       </select>
@@ -300,7 +300,7 @@
   <div class="container-5" style="width:76%;max-width: 600px;border-radius: 30px 0 30px 0;background-color: #a9cc75b3;">
 
 
-    <p style="text-align: center;color: #000000cd;">Feeling generous?</p>
+    <p style="text-align: center;color: #000000cd;margin-top: -5px;margin-bottom: -5px;">Feeling generous?</p>
 
     <div class="container-6">
       <a class="cell-link" href="https://forms.gle/uFq1vBSUbRhY5CZk6" target="_blank"
