--- a/index.html
+++ b/index.html
@@ -23,17 +23,13 @@
       display: grid;
       place-items: center;
       grid-template-columns: auto auto;
-      /* background-color: dodgerblue; */
-      /* padding: 10px; */
       border-radius: 15px;
       padding: 10px;
       margin: 20px auto;
       width: 79%;
       max-width: 350px;
-      /* box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3); */
       /*the button visibility*/
       position: relative;
-      /* background-color: #000000c5; */
       column-gap: 30px;
       row-gap: 12%;
 
@@ -53,8 +49,6 @@
       padding: 10px;
       font-size: 30px;
       text-align: center;
-      /* color: #f2f2f200; */
-      /* width: 100%; */
 
     }
   </style>
@@ -84,7 +78,7 @@
       <!-- <button class="dropbtn">Quick<br>Links</button> -->
       <div class="dropdown-content">
         <!-- APK LINK -->
-        <div class="navigation1" style="background-color: #0000009b;"></div>
+        <div class="navigation1" style="background-color: #ffffff9b;color: #000000;"></div>
         <script src="apk-link.js"></script>
         <a style="color: black;" class="active-1" href="https://ouits-schedule.netlify.app/" target="blank">
           <small>oUITS<br>Scheduler</small>
@@ -130,12 +124,8 @@
 
   <!-- GO BOTTOM RELATIVE LINK -->
 
-  <!-- <p id="top" align="right"><small><a href="#bottom" style="color:rgba(0, 0, 0, 0.24);">go to bottom</a></small></p> -->
-
-  <!-- <div class="scroll-text">This is scrolling text.</div> -->
 
   <div class="navbar-5">
-    <font size="24"></font>
     <p align=center style="color:rgba(255, 255, 255, 0.776);"><i>oUITS Resources</i></p>
     </font>
 
@@ -179,7 +169,8 @@
         <option value="ce" align="center">CE</option>
       </select>
       <br>
-      <button id="resetButton" style="border-radius: 15px;margin-top: 5px;background-color: #ffffff00;color: #ffffff;"><small><b>Clear?</b></small></button>
+      <button id="resetButton"
+        style="border-radius: 15px;margin-top: 5px;background-color: #ffffff00;color: #ffffff;"><small><b>Clear?</b></small></button>
 
       <div id="semesterList"></div>
       <p id="driveLink"></p>
@@ -305,12 +296,12 @@
     <div class="container-6">
       <a class="cell-link" href="https://forms.gle/uFq1vBSUbRhY5CZk6" target="_blank"
         style="color: #424242;padding-top:15%;background-color: #ffffff;border-radius: 50px 50px 50px 50px;width: 100px;box-shadow: 1px 2px 10px #000000;text-align: center;padding: 8%;">
-        <strong>Upload<br>Questions</strong><br>
+        Upload<br>Questions<br>
         <i style="font-size: x-small;">(.pdf Upload)</i>
       </a>
       <a class="cell-link" href="https://forms.gle/ovz4p5VAEsB6G7fp7" target="_blank"
         style="color: #ffffff;padding-top:15%;background-color: #3776f6ec;border-radius: 50px 50px 50px 50px;width: 100px;box-shadow: 1px 2px 10px #000000;text-align: center;padding: 8%;">
-        <strong>Upload<br>Notes</strong><br>
+        Upload<br>Notes<br>
         <i style="font-size: x-small;">(.zip Upload)</i>
       </a>
 
