updated some texts

--- a/index.html
+++ b/index.html
@@ -133,8 +133,9 @@
   <!-- <h1 align="center">oUITS-Resources</h1> -->
 
   <p class="highlights-5" align="center" style="color: rgba(0, 0, 0, 0.649);margin-bottom: -5px;margin-top: 15px;">
-    <small><i>Browse resources for UITS Students</i></small><br><small><i style="font-size: xx-small;">(more
-        relevant to CSE)</i></small>
+    <small><i>Browse resources for UITS Students</i></small>
+    <!-- <br><small><i style="font-size: xx-small;">(more
+        relevant to CSE)</i></small> -->
   </p>
 
   <!-- <p align="center" style="margin-bottom: -10px;"><small><i>Resources for UITS Students</i></small><br><small><i
