--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <!-- APK LINK -->
         <div class="navigation1" style="background-color: #ffffff9b;color: #000000;"></div>
         <script src="apk-link.js"></script>
-        <a style="color: black;" class="active-1" href="https://ouits-schedule.netlify.app/" target="blank">
+        <a style="color: rgb(0, 0, 0);" class="active-1" href="https://ouits-schedule.netlify.app/" target="blank">
           <small>oUITS<br>Scheduler</small>
         </a>
         <a style="color: black;" class="active-1"
