--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
     <!-- <br> -->
     <!-- class="semester-selector-container"  -->
     <div class=".resources-table-5"
-      style="width: 85%;padding-right: 15px;margin: auto;margin-top: -10px;margin-bottom: -30px;" align="center">
+      style="width: 85%;padding-right: 15px;margin: auto;margin-left: 7.5%;margin-top: -5px;" align="center">
       <label for="department" style="color: rgba(255, 255, 255, 0.68);font-size: small;"></label>
       <!-- Click Below to Browse Semesters -->
       <br>
